Fixes word-wrap
Break means break on words no matter what. Normal means if it's mid word
and there's no room for it on the next line, let it go.

--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -297,11 +297,11 @@ h1.no-margins {
 }
 
 .word-wrap {
-    -ms-word-break: break-all;
-    word-break: break-all;
-    word-break: break-word;
-    overflow-wrap: break-word;
-    word-wrap: break-word;
+    -ms-word-break: normal;
+    word-break: normal;
+    word-break: normal;
+    overflow-wrap: normal;
+    word-wrap: normal;
     -ms-hyphens: auto;
     -moz-hyphens: auto;
     -webkit-hyphens: auto;
